wp-content/themes/source-tech/css/ri-styles.css
/* ... */
.gform_body .ginput_container {
	margin-top: 8px !important;
}
.gform_body li.gfield {
	margin-top: 16px !important;
}
.gform_footer input[type="submit"] {
	background-color: #ea662b !important;
	padding: .75em 1em !important;
	color: #fff !important;
	font-size: 1.25em !important;
	border-radius: 3px !important;
	font-weight: bold !important;
	margin-top: 1em !important;
}
.gform_footer input[type="submit"]:hover {
	cursor: pointer !important;
	background-color: #C3470F !important;
}
.gsection_description {
	padding-top: 10px;
	font-style: italic;
}
/****************************************
*** Page: Refurbished Servers (661) ***
*****************************************/
.manufacturer-container {
	padding: 2.5rem 0 3rem;
}
#custom-content .manufacturer-container:nth-child(even) {
	/*background-color: #f5f8fa;*/
}
.manufacturer-logo {
	max-height: 150px;
}
.manufacturer-desc {
	line-height: 145%;
	font-weight: 600;
}
.form-manufacturer {
	margin-bottom: -.5rem;
	letter-spacing: .05rem;
	font-size: .85rem;
	color: #666;
}
.form-factor {
	font-family: "Open Sans Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
}
.form-factor-links {
	font-weight: bold;
	font-size: .95rem;
	letter-spacing: -.02rem;
	background-color: #2ea3f2;
	color: #fff !important;
	padding: .3rem 1rem;
	border-radius: 4px;
	display: block;
}
.product-count {
	color: #666;
	font-style: italic;
	font-size: .75rem;
	font-weight: 600;
	margin-top: .5rem;
	margin-bottom: -.5rem;
}
.product-count strong {
	color: #333;
}
/****************************************
*** Media Queries ***
*****************************************/
@media all and (max-width: 1600px) {
	.main-navigation .menu-main-nav-container,
	.site-header .bottom-row,
	.container-fluid > .wrapper
	{
		max-width: 90% !important;
	}

	#homepage-banner-container h1 {
		font-size: 2.5em !important;
	}
	#homepage-hero-image img {
		max-width: 80% !important;
	}
}
@media all and (max-width: 1200px) {
	.modal-body .modal-cta {
		font-size: 1.15rem !important;
	}
}
@media all and (max-width: 1130px) {
	#homepage-banner-container .et_pb_column_3_5 {
		width: 100% !important;
	}
	#homepage-banner-container .et_pb_column_3_5 .et_pb_text_inner {
		background: rgba(0,0,0,.5);
		padding: 2em;
		border-radius: 3px;
	}
	#homepage-hero-image img {
		max-width: 80% !important;
	}
	#homepage-hero-image img {
		display: none !important;
	}
}
@media all and (max-width: 679px) {
	#homepage-banner-container h1 {
		font-size: 1.75em !important;
	}
}
/*** Small Devices, Tablets  ***/
@media only screen and (max-width : 768px) {
	.sticky-top {
		z-index: 99999;
	}
	#masthead {
		margin-top: 0;
	}
	.site-header .bottom-row {
		display: inline-block;
	}
	.main-navigation .menu-toggle {
		float: right;
		position: relative;
		bottom: 4rem;
		margin-bottom: -4rem;
	}
	.main-navigation li {
		text-align: left;
	}
	.custom-logo-link > img {
		max-width: 160px;
		margin-top: 1.75rem;
	}
	.modal-features-container {
		margin-top: 2em;
	}
	#modal-body-headline {
		font-size: 23px !important;
		line-height: 26px !important;
	}
	#modal-body-subheadline {
		font-size: 14px !important;
	}
	#modal-form-container-title {
		margin-bottom: 1.5em;
		line-height: 1.3;
	}
}
@media all and (max-width: 479px) {
	.textwidget .menu li:last-of-type {
		display: none;
	}
	span.icon-phone {
		display: inherit !important;
		float: left;
	}
	.et-db #et-boc .et_pb_section {
		padding: 25px 0 !important;
	}
	.page-title {
		font-size: 2em;
	}
	.single-product div.product .summary-block .entry-summary .request-quote {
		font-size: 1.2rem !important;
		padding: 12px 15px;
		border-radius: 3px;
	}
	.mobile-model-title {
		display: inherit;
		margin-bottom: 0;
		text-align: center;
		line-height: 120%;
	}
	.desktop-model-title{
		display: none;
	}
	.main-navigation .menu-toggle {
		font-size: 1.25em;
		background: #006494;
		text-decoration: underline;
	}
	header #right-column {
		display: none;
	}
	div.breadcrumbs {
		display: none;
	}
	a.woocommerce-product-gallery__trigger {
		display: none !important;
	}
	figure.woocommerce-product-gallery__wrapper {
		margin: 0 10px;
	}
	.gform_button {
		text-align: center !important;
	}
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
	.form-factor {
		font-size: 1.5rem;
	}
	.fluid-constrained {
		max-width: 90%;
	}
	.site-header .top-row {
		padding-top: 0;
	}
	.site-header .top-row ul.menu li {
		background: #f5f8fa;
		margin: 0 !important;
		padding: .2rem 1rem .3rem;
		box-shadow: 0 10px 10px -5px rgba(51,71,91,0.1);
	}
	.top-row ul.menu li:first-of-type {
		border-right: 1px solid #A8BECD;
		border-left: 1px solid #eee;
		border-bottom: 1px solid #eee;
		border-bottom-left-radius: 4px;
	}
	.top-row ul.menu li:last-of-type {
		border-right: 1px solid #eee;
		border-bottom: 1px solid #eee;
		border-bottom-right-radius: 4px;
	}
	.site-header .top-row .widget_custom_html .menu li .icon {
		padding-right: 5px;
	}
	.site-branding a {
		display: initial;
	}
	.site-branding a img {
		max-width: 200px;
		position: relative;
	}
	form.search-form {
		min-width: 225px;
		position: relative;
		bottom: .5rem;
	}
	form.search-form label, form.search-form input.search-field {
		width: 225px;
	}
}
/* Responsive Styles Desktop Only */
@media all and (min-width: 981px) {
	.cta-btn-large {
		font-size: 1.2rem !important;
	}
	.masthead h1 {
		font-size: 3rem;
	}
	.form-factor {
		font-size: 2rem;
	}
	.sub-heading {
		font-size: 1.5em !important;
		line-height: 120% !important;
		margin-bottom: .5em !important;
	}
	.et-db #et-boc .et_pb_testimonial:before {
		font-size: 50px !important;
		margin-left: -25px !important;
		top: -25px !important;
		color: #0087c7;
	}
	.testimonials-section .et_pb_testimonial_description {
		font-size: 21px;
		position: relative;
		top: 1em;
		font-style: normal;
	}
	.testimonials-section .et_pb_testimonial_author {
		font-size: 20px;
		font-style: normal;
		font-weight: bolder;
	}
}

